--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "append": "git://github.com/utilise/append",
     "base": "git://github.com/utilise/base",
     "chainable": "git://github.com/utilise/chainable",
+    "client": "git://github.com/utilise/client",
     "def": "git://github.com/utilise/def",
     "emitterify": "git://github.com/utilise/emitterify",
     "err": "git://github.com/utilise/err",
