add more helpers

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "append": "git://github.com/utilise/append",
     "attr": "git://github.com/utilise/attr",
     "base": "git://github.com/utilise/base",
+    "body": "git://github.com/utilise/body",
     "chainable": "git://github.com/utilise/chainable",
     "client": "git://github.com/utilise/client",
     "def": "git://github.com/utilise/def",
     "emitterify": "git://github.com/utilise/emitterify",
     "err": "git://github.com/utilise/err",
+    "first": "git://github.com/utilise/first",
     "fn": "git://github.com/utilise/fn",
     "has": "git://github.com/utilise/has",
     "header": "git://github.com/utilise/header",
@@ -25,12 +27,15 @@
     "is": "git://github.com/utilise/is",
     "key": "git://github.com/utilise/key",
     "keys": "git://github.com/utilise/keys",
+    "last": "git://github.com/utilise/last",
+    "lo": "git://github.com/utilise/lo",
     "log": "git://github.com/utilise/log",
     "noop": "git://github.com/utilise/noop",
     "not": "git://github.com/utilise/not",
     "objectify": "git://github.com/utilise/objectify",
     "prepend": "git://github.com/utilise/prepend",
     "rebind": "git://github.com/utilise/rebind",
+    "resourcify": "git://github.com/utilise/resourcify",
     "values": "git://github.com/utilise/values"
   }
 }
