add copy and extend module

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "body": "git://github.com/utilise/body",
     "chainable": "git://github.com/utilise/chainable",
     "client": "git://github.com/utilise/client",
+    "copy": "git://github.com/utilise/copy",
     "def": "git://github.com/utilise/def",
     "emitterify": "git://github.com/utilise/emitterify",
     "err": "git://github.com/utilise/err",
+    "extend": "git://github.com/utilise/extend",
     "first": "git://github.com/utilise/first",
     "fn": "git://github.com/utilise/fn",
     "has": "git://github.com/utilise/has",
