--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "by": "git://github.com/utilise/by",
     "chainable": "git://github.com/utilise/chainable",
     "client": "git://github.com/utilise/client",
+    "colorfill": "git://github.com/utilise/colorfill",
     "copy": "git://github.com/utilise/copy",
     "def": "git://github.com/utilise/def",
     "emitterify": "git://github.com/utilise/emitterify",
