--- a/package.json
+++ b/package.json
@@ -16,49 +16,49 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "all": "git://github.com/utilise/all",
-    "append": "git://github.com/utilise/append",
-    "args": "git://github.com/utilise/args",
-    "attr": "git://github.com/utilise/attr",
-    "base": "git://github.com/utilise/base",
-    "body": "git://github.com/utilise/body",
-    "by": "git://github.com/utilise/by",
-    "chainable": "git://github.com/utilise/chainable",
-    "client": "git://github.com/utilise/client",
-    "colorfill": "git://github.com/utilise/colorfill",
-    "copy": "git://github.com/utilise/copy",
-    "def": "git://github.com/utilise/def",
-    "emitterify": "git://github.com/utilise/emitterify",
-    "err": "git://github.com/utilise/err",
-    "extend": "git://github.com/utilise/extend",
-    "first": "git://github.com/utilise/first",
-    "fn": "git://github.com/utilise/fn",
-    "has": "git://github.com/utilise/has",
-    "header": "git://github.com/utilise/header",
-    "identity": "git://github.com/utilise/identity",
-    "includes": "git://github.com/utilise/includes",
-    "is": "git://github.com/utilise/is",
-    "key": "git://github.com/utilise/key",
-    "keys": "git://github.com/utilise/keys",
-    "last": "git://github.com/utilise/last",
-    "lo": "git://github.com/utilise/lo",
-    "log": "git://github.com/utilise/log",
-    "matches": "git://github.com/utilise/by",
-    "noop": "git://github.com/utilise/noop",
-    "not": "git://github.com/utilise/not",
-    "objectify": "git://github.com/utilise/objectify",
-    "once": "git://github.com/utilise/once",
-    "owner": "git://github.com/utilise/owner",
-    "parse": "git://github.com/utilise/parse",
-    "prepend": "git://github.com/utilise/prepend",
-    "raw": "git://github.com/utilise/raw",
-    "rebind": "git://github.com/utilise/rebind",
-    "replace": "git://github.com/utilise/replace",
-    "resourcify": "git://github.com/utilise/resourcify",
-    "send": "git://github.com/utilise/send",
-    "str": "git://github.com/utilise/str",
-    "to": "git://github.com/utilise/to",
-    "values": "git://github.com/utilise/values"
+    "all": "git+https://github.com/utilise/all.git",
+    "append": "git+https://github.com/utilise/append.git",
+    "args": "git+https://github.com/utilise/args.git",
+    "attr": "git+https://github.com/utilise/attr.git",
+    "base": "git+https://github.com/utilise/base.git",
+    "body": "git+https://github.com/utilise/body.git",
+    "by": "git+https://github.com/utilise/by.git",
+    "chainable": "git+https://github.com/utilise/chainable.git",
+    "client": "git+https://github.com/utilise/client.git",
+    "colorfill": "git+https://github.com/utilise/colorfill.git",
+    "copy": "git+https://github.com/utilise/copy.git",
+    "def": "git+https://github.com/utilise/def.git",
+    "emitterify": "git+https://github.com/utilise/emitterify.git",
+    "err": "git+https://github.com/utilise/err.git",
+    "extend": "git+https://github.com/utilise/extend.git",
+    "first": "git+https://github.com/utilise/first.git",
+    "fn": "git+https://github.com/utilise/fn.git",
+    "has": "git+https://github.com/utilise/has.git",
+    "header": "git+https://github.com/utilise/header.git",
+    "identity": "git+https://github.com/utilise/identity.git",
+    "includes": "git+https://github.com/utilise/includes.git",
+    "is": "git+https://github.com/utilise/is.git",
+    "key": "git+https://github.com/utilise/key.git",
+    "keys": "git+https://github.com/utilise/keys.git",
+    "last": "git+https://github.com/utilise/last.git",
+    "lo": "git+https://github.com/utilise/lo.git",
+    "log": "git+https://github.com/utilise/log.git",
+    "matches": "git+https://github.com/utilise/by.git",
+    "noop": "git+https://github.com/utilise/noop.git",
+    "not": "git+https://github.com/utilise/not.git",
+    "objectify": "git+https://github.com/utilise/objectify.git",
+    "once": "git+https://github.com/utilise/once.git",
+    "owner": "git+https://github.com/utilise/owner.git",
+    "parse": "git+https://github.com/utilise/parse.git",
+    "prepend": "git+https://github.com/utilise/prepend.git",
+    "raw": "git+https://github.com/utilise/raw.git",
+    "rebind": "git+https://github.com/utilise/rebind.git",
+    "replace": "git+https://github.com/utilise/replace.git",
+    "resourcify": "git+https://github.com/utilise/resourcify.git",
+    "send": "git+https://github.com/utilise/send.git",
+    "str": "git+https://github.com/utilise/str.git",
+    "to": "git+https://github.com/utilise/to.git",
+    "values": "git+https://github.com/utilise/values.git"
   },
   "devDependencies": {
     "browserify": "^10.2.1",
