--- a/package.json
+++ b/package.json
@@ -16,49 +16,49 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "all": "git+https://github.com/utilise/all.git",
-    "append": "git+https://github.com/utilise/append.git",
-    "args": "git+https://github.com/utilise/args.git",
-    "attr": "git+https://github.com/utilise/attr.git",
-    "base": "git+https://github.com/utilise/base.git",
-    "body": "git+https://github.com/utilise/body.git",
-    "by": "git+https://github.com/utilise/by.git",
-    "chainable": "git+https://github.com/utilise/chainable.git",
-    "client": "git+https://github.com/utilise/client.git",
-    "colorfill": "git+https://github.com/utilise/colorfill.git",
-    "copy": "git+https://github.com/utilise/copy.git",
-    "def": "git+https://github.com/utilise/def.git",
-    "emitterify": "git+https://github.com/utilise/emitterify.git",
-    "err": "git+https://github.com/utilise/err.git",
-    "extend": "git+https://github.com/utilise/extend.git",
-    "first": "git+https://github.com/utilise/first.git",
-    "fn": "git+https://github.com/utilise/fn.git",
-    "has": "git+https://github.com/utilise/has.git",
-    "header": "git+https://github.com/utilise/header.git",
-    "identity": "git+https://github.com/utilise/identity.git",
-    "includes": "git+https://github.com/utilise/includes.git",
-    "is": "git+https://github.com/utilise/is.git",
-    "key": "git+https://github.com/utilise/key.git",
-    "keys": "git+https://github.com/utilise/keys.git",
-    "last": "git+https://github.com/utilise/last.git",
-    "lo": "git+https://github.com/utilise/lo.git",
-    "log": "git+https://github.com/utilise/log.git",
-    "matches": "git+https://github.com/utilise/by.git",
-    "noop": "git+https://github.com/utilise/noop.git",
-    "not": "git+https://github.com/utilise/not.git",
-    "objectify": "git+https://github.com/utilise/objectify.git",
-    "once": "git+https://github.com/utilise/once.git",
-    "owner": "git+https://github.com/utilise/owner.git",
-    "parse": "git+https://github.com/utilise/parse.git",
-    "prepend": "git+https://github.com/utilise/prepend.git",
-    "raw": "git+https://github.com/utilise/raw.git",
-    "rebind": "git+https://github.com/utilise/rebind.git",
-    "replace": "git+https://github.com/utilise/replace.git",
-    "resourcify": "git+https://github.com/utilise/resourcify.git",
-    "send": "git+https://github.com/utilise/send.git",
-    "str": "git+https://github.com/utilise/str.git",
-    "to": "git+https://github.com/utilise/to.git",
-    "values": "git+https://github.com/utilise/values.git"
+    "all": "https://github.com/utilise/all.git",
+    "append": "https://github.com/utilise/append.git",
+    "args": "https://github.com/utilise/args.git",
+    "attr": "https://github.com/utilise/attr.git",
+    "base": "https://github.com/utilise/base.git",
+    "body": "https://github.com/utilise/body.git",
+    "by": "https://github.com/utilise/by.git",
+    "chainable": "https://github.com/utilise/chainable.git",
+    "client": "https://github.com/utilise/client.git",
+    "colorfill": "https://github.com/utilise/colorfill.git",
+    "copy": "https://github.com/utilise/copy.git",
+    "def": "https://github.com/utilise/def.git",
+    "emitterify": "https://github.com/utilise/emitterify.git",
+    "err": "https://github.com/utilise/err.git",
+    "extend": "https://github.com/utilise/extend.git",
+    "first": "https://github.com/utilise/first.git",
+    "fn": "https://github.com/utilise/fn.git",
+    "has": "https://github.com/utilise/has.git",
+    "header": "https://github.com/utilise/header.git",
+    "identity": "https://github.com/utilise/identity.git",
+    "includes": "https://github.com/utilise/includes.git",
+    "is": "https://github.com/utilise/is.git",
+    "key": "https://github.com/utilise/key.git",
+    "keys": "https://github.com/utilise/keys.git",
+    "last": "https://github.com/utilise/last.git",
+    "lo": "https://github.com/utilise/lo.git",
+    "log": "https://github.com/utilise/log.git",
+    "matches": "https://github.com/utilise/by.git",
+    "noop": "https://github.com/utilise/noop.git",
+    "not": "https://github.com/utilise/not.git",
+    "objectify": "https://github.com/utilise/objectify.git",
+    "once": "https://github.com/utilise/once.git",
+    "owner": "https://github.com/utilise/owner.git",
+    "parse": "https://github.com/utilise/parse.git",
+    "prepend": "https://github.com/utilise/prepend.git",
+    "raw": "https://github.com/utilise/raw.git",
+    "rebind": "https://github.com/utilise/rebind.git",
+    "replace": "https://github.com/utilise/replace.git",
+    "resourcify": "https://github.com/utilise/resourcify.git",
+    "send": "https://github.com/utilise/send.git",
+    "str": "https://github.com/utilise/str.git",
+    "to": "https://github.com/utilise/to.git",
+    "values": "https://github.com/utilise/values.git"
   },
   "devDependencies": {
     "browserify": "^10.2.1",
