--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "emitterify": "git+https://github.com/utilise/emitterify.git",
     "err": "git+https://github.com/utilise/err.git",
     "extend": "git+https://github.com/utilise/extend.git",
-    "first": "git+https://github.com/utilise/first.git",
     "file": "git+https://github.com/utilise/file.git",
+    "first": "git+https://github.com/utilise/first.git",
     "fn": "git+https://github.com/utilise/fn.git",
     "has": "git+https://github.com/utilise/has.git",
     "header": "git+https://github.com/utilise/header.git",
-    "identity": "git+https://github.com/utilise/identity.git",
+    "identity": "git://github.com/utilise/identity.git",
     "includes": "git+https://github.com/utilise/includes.git",
+    "inherit": "git://github.com/utilise/inherit.git",
     "is": "git+https://github.com/utilise/is.git",
     "key": "git+https://github.com/utilise/key.git",
     "keys": "git+https://github.com/utilise/keys.git",
