--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "fn": "git+https://github.com/utilise/fn.git",
     "has": "git+https://github.com/utilise/has.git",
     "header": "git+https://github.com/utilise/header.git",
-    "identity": "git://github.com/utilise/identity.git",
+    "identity": "git+https://github.com/utilise/identity.git",
     "includes": "git+https://github.com/utilise/includes.git",
-    "inherit": "git://github.com/utilise/inherit.git",
+    "inherit": "git+https://github.com/utilise/inherit.git",
     "is": "git+https://github.com/utilise/is.git",
     "key": "git+https://github.com/utilise/key.git",
     "keys": "git+https://github.com/utilise/keys.git",
