--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "colorfill": "git+https://github.com/utilise/colorfill.git",
     "copy": "git+https://github.com/utilise/copy.git",
     "def": "git+https://github.com/utilise/def.git",
+    "el": "git+https://github.com/utilise/el.git",
     "emitterify": "git+https://github.com/utilise/emitterify.git",
     "err": "git+https://github.com/utilise/err.git",
     "extend": "git+https://github.com/utilise/extend.git",
-    "falsy": "git://github.com/utilise/falsy.git",
+    "falsy": "git+https://github.com/utilise/falsy.git",
     "file": "git+https://github.com/utilise/file.git",
     "first": "git+https://github.com/utilise/first.git",
     "fn": "git+https://github.com/utilise/fn.git",
