--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "via": false
   },
   "scripts": {
-    "bundle": "browserify tmp.js -o utilise.js -i d3 -s utilise && rm tmp.js",
+    "bundle": "browserify tmp.js -o utilise.js -i d3 -i colors -s utilise && rm tmp.js",
     "minify": "uglifyjs utilise.js -m -c drop_console,dead_code -d client=true -o utilise.min.js",
     "gzip": "gzip -c utilise.min.js > utilise.min.js.gz",
     "build": "node alias.js && npm run bundle && npm run minify && npm run gzip",
@@ -26,8 +26,11 @@
     "by": "git+https://github.com/utilise/by.git",
     "chainable": "git+https://github.com/utilise/chainable.git",
     "client": "git+https://github.com/utilise/client.git",
+    "clone": "git+https://github.com/utilise/clone.git",
     "colorfill": "git+https://github.com/utilise/colorfill.git",
     "copy": "git+https://github.com/utilise/copy.git",
+    "datum": "git+https://github.com/utilise/datum.git",
+    "debounce": "git+https://github.com/utilise/debounce.git",
     "def": "git+https://github.com/utilise/def.git",
     "el": "git+https://github.com/utilise/el.git",
     "emitterify": "git+https://github.com/utilise/emitterify.git",
@@ -43,6 +46,7 @@
     "includes": "git+https://github.com/utilise/includes.git",
     "inherit": "git+https://github.com/utilise/inherit.git",
     "is": "git+https://github.com/utilise/is.git",
+    "join": "git+https://github.com/utilise/join.git",
     "key": "git+https://github.com/utilise/key.git",
     "keys": "git+https://github.com/utilise/keys.git",
     "last": "git+https://github.com/utilise/last.git",
@@ -50,6 +54,7 @@
     "log": "git+https://github.com/utilise/log.git",
     "mask": "git+https://github.com/utilise/mask.git",
     "matches": "git+https://github.com/utilise/by.git",
+    "mo": "git+https://github.com/utilise/mo.git",
     "noop": "git+https://github.com/utilise/noop.git",
     "not": "git+https://github.com/utilise/not.git",
     "objectify": "git+https://github.com/utilise/objectify.git",
@@ -62,6 +67,7 @@
     "rebind": "git+https://github.com/utilise/rebind.git",
     "replace": "git+https://github.com/utilise/replace.git",
     "resourcify": "git+https://github.com/utilise/resourcify.git",
+    "sel": "git+https://github.com/utilise/sel.git",
     "send": "git+https://github.com/utilise/send.git",
     "str": "git+https://github.com/utilise/str.git",
     "to": "git+https://github.com/utilise/to.git",
