update packages and add readme

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "browser": {
+    "pause": false,
     "send": false,
+    "file": false,
     "via": false
   },
   "scripts": {
@@ -21,7 +23,6 @@
     "append": "git+https://github.com/utilise/append.git",
     "args": "git+https://github.com/utilise/args.git",
     "attr": "git+https://github.com/utilise/attr.git",
-    "base": "git+https://github.com/utilise/base.git",
     "body": "git+https://github.com/utilise/body.git",
     "by": "git+https://github.com/utilise/by.git",
     "chainable": "git+https://github.com/utilise/chainable.git",
@@ -39,8 +40,10 @@
     "falsy": "git+https://github.com/utilise/falsy.git",
     "file": "git+https://github.com/utilise/file.git",
     "first": "git+https://github.com/utilise/first.git",
+    "flatten": "git+https://github.com/utilise/flatten.git",
     "fn": "git+https://github.com/utilise/fn.git",
     "from": "git+https://github.com/utilise/from.git",
+    "grep": "git+https://github.com/utilise/grep.git",
     "has": "git+https://github.com/utilise/has.git",
     "header": "git+https://github.com/utilise/header.git",
     "identity": "git+https://github.com/utilise/identity.git",
@@ -63,17 +66,21 @@
     "once": "git+https://github.com/utilise/once.git",
     "owner": "git+https://github.com/utilise/owner.git",
     "parse": "git+https://github.com/utilise/parse.git",
+    "pause": "git+https://github.com/utilise/pause.git",
     "perf": "git+https://github.com/utilise/perf.git",
     "prepend": "git+https://github.com/utilise/prepend.git",
     "promise": "git+https://github.com/utilise/promise.git",
+    "proxy": "git+https://github.com/utilise/proxy.git",
     "raw": "git+https://github.com/utilise/raw.git",
     "rebind": "git+https://github.com/utilise/rebind.git",
     "replace": "git+https://github.com/utilise/replace.git",
     "resourcify": "git+https://github.com/utilise/resourcify.git",
+    "sall": "git+https://github.com/utilise/sall.git",
     "sel": "git+https://github.com/utilise/sel.git",
     "send": "git+https://github.com/utilise/send.git",
     "str": "git+https://github.com/utilise/str.git",
     "to": "git+https://github.com/utilise/to.git",
+    "unique": "git+https://github.com/utilise/unique.git",
     "values": "git+https://github.com/utilise/values.git",
     "via": "git+https://github.com/utilise/via.git",
     "wrap": "git+https://github.com/utilise/wrap.git"
