--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "file": false,
     "via": false
   },
+  "description": "Lean JavaScript Utilities as Micro-libraries",
   "scripts": {
     "bundle": "browserify tmp.js -o utilise.js -i d3 -i colors -s utilise && rm tmp.js",
     "minify": "uglifyjs utilise.js -m -c drop_console,dead_code -d client=true -o utilise.min.js",
