--- a/.popper.yml
+++ b/.popper.yml
@@ -2,8 +2,10 @@ globals:
   - <script src="https://cdn.polyfill.io/v1/polyfill.min.js"></script>
   - <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
   - <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.0.0/chai.min.js"></script>
+  - <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
 
-tests: browserify ./node_modules/**/test.js
+tests: browserify ./node_modules/*/test.js
+  -i moment
   -i colors
   -i jsdom
   -i chai
@@ -12,17 +14,18 @@ tests: browserify ./node_modules/**/test.js
   -i ./node_modules/send/test.js
   -i ./node_modules/file/test.js
   -i ./node_modules/via/test.js
+  | sed -E "s/require\('moment'\)/window.moment/"
   | sed -E "s/require\('chai'\)/window.chai/"
   | sed -E "s/require\('d3'\)/window.d3/"
   | uglifyjs
 
 browsers: 
-  # - ie9
-  # - android
-  # - iphone
-  # - opera
-  # - safari
+  - ie9
+  - android
+  - iphone
+  - opera
+  - safari
 
 port: 1945
 
-watch: ../*/index.js
+watch: ./node_modules/*/index.js
