update new build process

--- a/package.json
+++ b/package.json
@@ -23,75 +23,75 @@
   },
   "author": "Pedram Emrouznejad (https://github.com/pemrouz)",
   "license": "pemrouz.mit-license.org",
-  "dependencies": {
-    "all": "git+https://github.com/utilise/all.git",
-    "append": "git+https://github.com/utilise/append.git",
-    "args": "git+https://github.com/utilise/args.git",
-    "attr": "git+https://github.com/utilise/attr.git",
-    "body": "git+https://github.com/utilise/body.git",
-    "by": "git+https://github.com/utilise/by.git",
-    "chainable": "git+https://github.com/utilise/chainable.git",
-    "client": "git+https://github.com/utilise/client.git",
-    "clone": "git+https://github.com/utilise/clone.git",
-    "colorfill": "git+https://github.com/utilise/colorfill.git",
-    "copy": "git+https://github.com/utilise/copy.git",
-    "datum": "git+https://github.com/utilise/datum.git",
-    "debounce": "git+https://github.com/utilise/debounce.git",
-    "def": "git+https://github.com/utilise/def.git",
-    "el": "git+https://github.com/utilise/el.git",
-    "emitterify": "git+https://github.com/utilise/emitterify.git",
-    "err": "git+https://github.com/utilise/err.git",
-    "extend": "git+https://github.com/utilise/extend.git",
-    "falsy": "git+https://github.com/utilise/falsy.git",
-    "file": "git+https://github.com/utilise/file.git",
-    "first": "git+https://github.com/utilise/first.git",
-    "flatten": "git+https://github.com/utilise/flatten.git",
-    "fn": "git+https://github.com/utilise/fn.git",
-    "from": "git+https://github.com/utilise/from.git",
-    "grep": "git+https://github.com/utilise/grep.git",
-    "group": "git+https://github.com/utilise/group.git",
-    "has": "git+https://github.com/utilise/has.git",
-    "header": "git+https://github.com/utilise/header.git",
-    "identity": "git+https://github.com/utilise/identity.git",
-    "includes": "git+https://github.com/utilise/includes.git",
-    "inherit": "git+https://github.com/utilise/inherit.git",
-    "is": "git+https://github.com/utilise/is.git",
-    "join": "git+https://github.com/utilise/join.git",
-    "key": "git+https://github.com/utilise/key.git",
-    "keys": "git+https://github.com/utilise/keys.git",
-    "last": "git+https://github.com/utilise/last.git",
-    "link": "git+https://github.com/utilise/link.git",
-    "lo": "git+https://github.com/utilise/lo.git",
-    "log": "git+https://github.com/utilise/log.git",
-    "matches": "git+https://github.com/utilise/by.git",
-    "mo": "git+https://github.com/utilise/mo.git",
-    "noop": "git+https://github.com/utilise/noop.git",
-    "not": "git+https://github.com/utilise/not.git",
-    "objectify": "git+https://github.com/utilise/objectify.git",
-    "once": "git+https://github.com/utilise/once.git",
-    "owner": "git+https://github.com/utilise/owner.git",
-    "parse": "git+https://github.com/utilise/parse.git",
-    "pause": "git+https://github.com/utilise/pause.git",
-    "perf": "git+https://github.com/utilise/perf.git",
-    "prepend": "git+https://github.com/utilise/prepend.git",
-    "promise": "git+https://github.com/utilise/promise.git",
-    "proxy": "git+https://github.com/utilise/proxy.git",
-    "raw": "git+https://github.com/utilise/raw.git",
-    "rebind": "git+https://github.com/utilise/rebind.git",
-    "replace": "git+https://github.com/utilise/replace.git",
-    "resourcify": "git+https://github.com/utilise/resourcify.git",
-    "sall": "git+https://github.com/utilise/sall.git",
-    "sel": "git+https://github.com/utilise/sel.git",
-    "send": "git+https://github.com/utilise/send.git",
-    "str": "git+https://github.com/utilise/str.git",
-    "to": "git+https://github.com/utilise/to.git",
-    "unique": "git+https://github.com/utilise/unique.git",
-    "values": "git+https://github.com/utilise/values.git",
-    "via": "git+https://github.com/utilise/via.git",
-    "wrap": "git+https://github.com/utilise/wrap.git"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browserify": "^10.2.1",
-    "uglify-js": "^2.4.23"
+    "colors": "^1.1.2",
+    "uglify-js": "^2.4.23",
+    "utilise.all": "*",
+    "utilise.append": "*",
+    "utilise.args": "*",
+    "utilise.attr": "*",
+    "utilise.body": "*",
+    "utilise.by": "*",
+    "utilise.chainable": "*",
+    "utilise.client": "*",
+    "utilise.clone": "*",
+    "utilise.colorfill": "*",
+    "utilise.copy": "*",
+    "utilise.datum": "*",
+    "utilise.debounce": "*",
+    "utilise.def": "*",
+    "utilise.el": "*",
+    "utilise.emitterify": "*",
+    "utilise.err": "*",
+    "utilise.extend": "*",
+    "utilise.falsy": "*",
+    "utilise.file": "*",
+    "utilise.first": "*",
+    "utilise.flatten": "*",
+    "utilise.fn": "*",
+    "utilise.from": "*",
+    "utilise.grep": "*",
+    "utilise.group": "*",
+    "utilise.has": "*",
+    "utilise.header": "*",
+    "utilise.identity": "*",
+    "utilise.includes": "*",
+    "utilise.inherit": "*",
+    "utilise.is": "*",
+    "utilise.join": "*",
+    "utilise.key": "*",
+    "utilise.keys": "*",
+    "utilise.last": "*",
+    "utilise.link": "*",
+    "utilise.lo": "*",
+    "utilise.log": "*",
+    "utilise.mo": "*",
+    "utilise.noop": "*",
+    "utilise.not": "*",
+    "utilise.objectify": "*",
+    "utilise.once": "*",
+    "utilise.owner": "*",
+    "utilise.parse": "*",
+    "utilise.pause": "*",
+    "utilise.perf": "*",
+    "utilise.prepend": "*",
+    "utilise.promise": "*",
+    "utilise.proxy": "*",
+    "utilise.raw": "*",
+    "utilise.rebind": "*",
+    "utilise.replace": "*",
+    "utilise.resourcify": "*",
+    "utilise.sall": "*",
+    "utilise.sel": "*",
+    "utilise.send": "*",
+    "utilise.split": "*",
+    "utilise.str": "*",
+    "utilise.to": "*",
+    "utilise.unique": "*",
+    "utilise.values": "*",
+    "utilise.via": "*",
+    "utilise.wrap": "*"
   }
 }
